samples/_failures_safe/1761257341_834a2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9df3f2f7.c: In function ‘main’:
./samples/SAFE/__tmp_9df3f2f7.c:198:5: error: expected expression at end of input
  198 |     for (int i = 0; i < token_count;
      |     ^~~
./samples/SAFE/__tmp_9df3f2f7.c:198:5: error: expected declaration or statement at end of input
